# swordguy

./: .flake8  .gitignore  .pylintrc  dorf.py  inputmanager.py  main.py  pyproject.toml  scenemanager.py  scenes.py  swordguy.py  test.py  utils.py
src/: bullet.py  dorf.py  game.py  managers.py  utils.py
src/scenes/: mainscene.py  scene.py  startup.py
