[tool.poetry]
name = "swordguy"
version = "0.1.0"
description = ""
authors = ["Jason McGillivray <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
pymunk = "^6.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
black = "^20.8b1"
pylint = "^2.7.4"
flake8 = "^3.9.1"
neovim = "^0.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
